--- a/action.yml
+++ b/action.yml
@@ -33,6 +33,10 @@ inputs:
     description: 'Flags to pass to the Go linker.'
     default: ''
     required: false
+  addfolder:
+    description: 'Add a folder inside the ".tar.gz archive"'
+    default: ''
+    required: false
 
 # action runner (golang:latest image)
 runs:
